# StableCoinProject

./: .gitignore  README.md  auctions模块详细说明.md  hardhat.config.ts  package-lock.json  package.json  清算测试说明.md
contracts/: CustodianFixed.sol  InterestManager.sol  StableUSDCAMM.sol  Types.sol
contracts/auctions/: AuctionManager.sol  (+2 more)
frontend/: admin.html  app.js  index.html  styles.css
keeper_bots/: QUICK_START.md  README.md  analyze_custom_error.py  auction_reset_keeper.py  calculate_nav.py  check_positions.py  config.json  create_test_scenarios.py  debug_liquidation.py  detailed_nav_debug.py  increase_wltc_price.py  liquidation_keeper.py  local_test_setup.py  requirements.txt  run_bots.py  simple_liquidation_test.py  simple_price_drop_test.py  start_bots.py  test_actual_liquidation.py  test_bots.py  test_keeper_direct.py  test_keeper_logic.py  test_liquidation_scenario.py  test_positive_nav_liquidation.py
keeper_bots/rust_liquidation_keeper/: Cargo.toml  README.md  config.toml
keeper_bots/rust_liquidation_keeper/src/: config.rs  database.rs  events.rs  liquidation.rs  main.rs  nav.rs  reset.rs
scripts/: CheckFreezeStatus.js  SwapPreview.js  adjustment_test.js  basic_test.js  check_storacha_images.js  correct_getters_solution.md  debug_deployment.js  debug_mint_gas.js  debug_permissions.js  deploy_AMM.js  deploy_DEX.ts  deploy_LTC.js  deploy_MultiLeverageToken.js  deploy_simple_example.ts  fix_public_variables.md  interact_AMMwithDEX.js  liquidation_test.js  mint_tokens.ts  priceUpdate.js  required_getters_analysis.md  simple_gas_test.js  test_connection_only.js
(+106 files in other folders)
