[package]
name = "rust_liquidation_keeper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
web3 = "0.19"
rocksdb = "0.21"
futures-util = "0.3"
