[package]
name = "rust_liquidation_keeper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
web3 = { version = "0.19", features = ["http"] }
rocksdb = "0.21"
ethabi = "18.0"
futures-util = "0.3"
